syntax = "proto3";
package rpc.user;
option go_package = "QuickStone/src/rpc/user";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    uint32 status_code = 1;
    string status_msg = 2;
    uint32 uid = 3;
    string token = 4;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    uint32 status_code = 1;
    string status_msg = 2;
    uint32 uid = 3;
    string token = 4;
}

service UserService {
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
}